Cambios sobre el final

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,10 @@
     </ul>
     <h1>Cargar de Scrapper</h1>  
     <ul>
-      <li><a href="/scrapper/seguidor">Seguidor de Linea</a></li>
-      <li><a href="/scrapper/sumo">Sumo</a></li>
-      <li><a href="/scrapper/minisumo">Mini Sumo</a></li>
-      <li><a href="/scrapper/futbol">Futbol</a></li>
+      <li><a href="/scrapper/Seguido">Seguidor de Linea</a></li>
+      <li><a href="/scrapper/Sumo">Sumo</a></li>
+      <li><a href="/scrapper/Mini Sumo">Mini Sumo</a></li>
+      <li><a href="/scrapper/Futbol">Futbol</a></li>
     </ul>
     <h1>Tools</h1>
     <ul>
